X   X
    * Use UUID in HashMap instead of Player, fix potential memory leak/future incompatibility

2012-04-21  2.0
    * Add dispensing TNT, liquid, boat, minecart
    * Add conduits
    * Add crafter
    * Add interactor
    * Add breaker
    * Add vacuum
    * Add accelerator
    * Add filler
    * Add turret
    * Add extensive configurability


2012-04-16  1.2
    * Update for CraftBukkit 1.2.5-R1.0
    * Add spawn egg, bottle o' enchanting, and fire charge vertical dispensing
    * Fix internal error when using /disp with invalid direction

2012-03-03  1.1.1
    * Update for CraftBukkit 1.1-R6

2012-02-18  1.1
    * Fix NPE dispensing non-projectile items vertically
    * Change verbose config option default to false

2012-02-16  1.0
    * Initial release

2012-02-15  0.1
    * Initial pre-release (as "AntiDispenser")